tests/errors/guard-non-offset.fil
component Main<G, L>(
  @interface[G, G+6] go_G: 1,
  @interface[L, L+6] go_G: 1,
  @[G, G+3] in: 32,
  @[G, L+3] + @exact[G, L] g1: 1,
) -> (
  @[G, G+3] out: 32
) {
  out = g1 ? in;
}
